added unit test for more test coverage & imported noArgsConstructor